Add mobx dependency

--- a/universe/frontend/package.json
+++ b/universe/frontend/package.json
@@ -7,6 +7,7 @@
     "inferno": "^6.1.4",
     "inferno-create-element": "^6.1.5",
     "inferno-fela": "^9.0.4",
+    "inferno-mobx": "^6.2.1",
     "inferno-router": "^6.1.4",
     "inferno-scripts": "7.0.2",
     "node-sass": "^4.10.0"
