Add models page + store to frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,12 +32,14 @@
     "inferno-create-element": "^6.1.5",
     "inferno-dev-utils": "^6.0.2",
     "inferno-fela": "^9.0.4",
+    "inferno-helmet": "^5.2.1",
     "inferno-mobx": "^6.2.1",
     "inferno-motion": "^3.0.0",
     "inferno-router": "^6.1.4",
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "mapbox-gl": "^0.52.0-beta.2",
     "mini-css-extract-plugin": "0.4.4",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
