--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "jest-resolve": "23.6.0",
     "mapbox-gl": "^0.52.0-beta.2",
     "mini-css-extract-plugin": "0.4.4",
+    "moment": "^2.23.0",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
