--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "mapbox-gl": "^0.52.0-beta.2",
+    "marked": "^0.6.1",
     "mini-css-extract-plugin": "0.4.4",
     "moment": "^2.23.0",
     "node-sass": "^4.10.0",
