--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "koa-test",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec babel-node src/app.js",
+    "prod": "babel-node src/app.js",
     "seed": "node src/seed.js",
     "doom": "node src/doom.js"
   },
