--- a/backend/package.json
+++ b/backend/package.json
@@ -7,18 +7,20 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec babel-node src/app.js",
     "prod": "babel-node src/app.js",
-    "seed": "node src/seed.js",
-    "doom": "node src/doom.js"
+    "seed": "node src/utils/seed.js",
+    "doom": "node src/utils/doom.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
     "@koa/cors": "^2.2.3",
+    "bcrypt": "^3.0.5",
     "dotenv": "^6.2.0",
     "koa": "^2.7.0",
     "koa-body": "^4.0.8",
     "koa-compose": "^4.1.0",
+    "koa-jwt": "^3.5.1",
     "koa-logger": "^3.2.0",
     "koa-tree-router": "^0.4.4",
     "marked": "^0.6.1",
