--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^2.3.16",
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-typography": "^2.2.13",
+    "gatsby-source-sanity": "^2.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-typography": "^0.16.19",
