--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,13 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.3.16",
+    "gatsby-image": "^2.0.39",
+    "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-typography": "^2.2.13",
+    "gatsby-source-filesystem": "^2.0.29",
     "gatsby-source-sanity": "^2.0.3",
+    "gatsby-transformer-sharp": "^2.1.18",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-typography": "^0.16.19",
