--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.3.16",
     "gatsby-image": "^2.0.39",
+    "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-typography": "^2.2.13",
@@ -25,6 +26,7 @@
     "gatsby-transformer-sharp": "^2.1.18",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.0",
     "react-typography": "^0.16.19",
     "styled-components": "^4.2.0",
     "typography": "^0.16.19",
