--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "write-good": "write-good src/content/articles/*.md"
   },
   "dependencies": {
+    "@sanity/block-content-to-react": "^2.0.6",
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.3.16",
     "gatsby-image": "^2.0.39",
