--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,12 @@
     "typography-theme-github": "^0.16.19"
   },
   "devDependencies": {
-    "prettier": "^1.17.0"
+    "babel-jest": "^24.8.0",
+    "babel-preset-gatsby": "^0.1.11",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.8.0",
+    "prettier": "^1.17.0",
+    "react-test-renderer": "^16.8.6"
   },
   "repository": {
     "type": "git",
