Try to add deploy job for gitlab

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,3 +21,15 @@ gatsby:
       - frontend/public
   only:
     - master
+
+digitalocean:
+  stage: deploy
+  before_script:
+    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y)'
+    - eval $(ssh-agent -s)
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+    - cd frontend
+  script:
+    - rsync -r -v --stats --delete public gitlab@104.248.181.56:/home/universe
