--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^2.3.16",
     "gatsby-image": "^2.0.39",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-plugin-sitemap": "^2.1.0",
     "gatsby-plugin-styled-components": "^3.0.7",
