Try out remark source

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-typography": "^2.2.13",
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-source-sanity": "^2.0.3",
+    "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.18",
     "moment": "^2.24.0",
     "react": "^16.8.6",
