--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "gatsby-background-image": "^0.6.2",
     "gatsby-image": "^2.0.39",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-remark-collection": "^0.1.0",
     "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-plugin-sitemap": "^2.1.0",
