Add remark plugins

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@sanity/block-content-to-react": "^2.0.6",
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.3.16",
     "gatsby-background-image": "^0.6.2",
@@ -25,16 +24,21 @@
     "gatsby-plugin-sitemap": "^2.1.0",
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-typography": "^2.2.13",
+    "gatsby-remark-autolink-headers": "^2.0.16",
+    "gatsby-remark-component": "^1.1.3",
+    "gatsby-remark-copy-linked-files": "^2.0.13",
+    "gatsby-remark-external-links": "0.0.4",
+    "gatsby-remark-katex": "^3.0.4",
+    "gatsby-remark-prismjs": "^3.2.9",
     "gatsby-source-filesystem": "^2.0.29",
-    "gatsby-source-sanity": "^2.0.3",
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.18",
     "moment": "^2.24.0",
+    "prismjs": "^1.16.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-map-gl": "^4.1.2",
-    "react-syntax-highlighter": "^10.2.1",
     "react-typography": "^0.16.19",
     "styled-components": "^4.2.0",
     "typography": "^0.16.19",
