--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,6 @@
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-typography": "^2.2.13",
     "gatsby-remark-autolink-headers": "^2.0.16",
-    "gatsby-remark-component": "^1.1.3",
     "gatsby-remark-copy-linked-files": "^2.0.13",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-katex": "^3.0.4",
@@ -33,6 +32,7 @@
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.18",
+    "katex": "^0.10.2",
     "moment": "^2.24.0",
     "prismjs": "^1.16.0",
     "react": "^16.8.6",
