--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "serve": "gatsby serve",
     "test": "jest",
     "type-check": "tsc --noEmit",
-    "lint": "tslint --project ."
+    "generate-types": "graphql-codegen"
   },
   "dependencies": {
     "@types/node": "^12.0.5",
@@ -20,6 +20,7 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
     "@types/styled-components": "^4.1.16",
+    "@types/typography": "^0.16.2",
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.3.16",
     "gatsby-background-image": "^0.6.2",
@@ -52,6 +53,9 @@
     "typography-theme-github": "^0.16.19"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.2.0",
+    "@graphql-codegen/typescript": "^1.2.0",
+    "@graphql-codegen/typescript-operations": "^1.2.0",
     "babel-jest": "^24.8.0",
     "babel-preset-gatsby": "^0.1.11",
     "identity-obj-proxy": "^3.0.0",
