--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/styled-components": "^4.1.16",
     "@types/typography": "^0.16.2",
     "babel-plugin-styled-components": "^1.10.0",
-    "gatsby": "^2.3.16",
+    "gatsby": "^2.6.0-alpha.1",
     "gatsby-background-image": "^0.6.2",
     "gatsby-image": "^2.0.39",
     "gatsby-plugin-react-helmet": "^3.0.12",
