--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,6 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "noEmit": true,
-    "skipLibCheck": true,
-    "strictNullChecks": false
+    "skipLibCheck": true
   }
 }
