--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "generate-types": "graphql-codegen"
   },
   "dependencies": {
+    "@types/jest": "^24.0.13",
     "@types/node": "^12.0.5",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
@@ -53,6 +54,7 @@
     "typography-theme-github": "^0.16.19"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.3.3",
     "babel-jest": "^24.8.0",
     "babel-preset-gatsby": "^0.1.11",
     "identity-obj-proxy": "^3.0.0",
