--- a/package.json
+++ b/package.json
@@ -10,12 +10,9 @@
     "format": "prettier --write {src,__{tests,mocks}__}/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "jest",
-    "type-check": "tsc --noEmit",
-    "generate-types": "graphql-codegen"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@types/jest": "^24.0.13",
     "@types/node": "^12.0.5",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
@@ -54,13 +51,7 @@
     "typography-theme-github": "^0.16.19"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.3.3",
-    "babel-jest": "^24.8.0",
-    "babel-preset-gatsby": "^0.1.11",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.8.0",
     "prettier": "^1.17.0",
-    "react-test-renderer": "^16.8.6",
     "typescript": "^3.5.1"
   },
   "repository": {
