--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write {src,__{tests,mocks}__}/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "cypress open"
   },
   "dependencies": {
     "@types/node": "^12.0.5",
@@ -51,6 +52,7 @@
     "typography-theme-github": "^0.16.19"
   },
   "devDependencies": {
+    "cypress": "^3.3.1",
     "prettier": "^1.17.0",
     "typescript": "^3.5.1"
   },
