--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "test": "cypress open"
   },
   "dependencies": {
-    "@types/node": "^12.0.5",
+    "@types/node": "^12.0.8",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
     "@types/styled-components": "^4.1.16",
     "@types/typography": "^0.16.2",
     "babel-plugin-styled-components": "^1.10.0",
-    "gatsby": "^2.6.0-alpha.1",
-    "gatsby-background-image": "^0.6.2",
-    "gatsby-image": "^2.0.39",
+    "gatsby": "^2.9.0",
+    "gatsby-background-image": "^0.7.0",
+    "gatsby-image": "^2.1.3",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-remark-collection": "^0.1.0",
     "gatsby-plugin-robots-txt": "^1.4.0",
@@ -36,8 +36,8 @@
     "gatsby-remark-copy-linked-files": "^2.0.13",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-katex": "^3.0.4",
-    "gatsby-remark-prismjs": "^3.2.9",
-    "gatsby-source-filesystem": "^2.0.29",
+    "gatsby-remark-prismjs": "^3.2.11",
+    "gatsby-source-filesystem": "^2.0.39",
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.18",
     "katex": "^0.10.2",
@@ -46,7 +46,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
-    "react-map-gl": "^4.1.2",
+    "react-map-gl": "^5.0.3",
     "react-typography": "^0.16.19",
     "styled-components": "^4.2.0",
     "typography": "^0.16.19",
@@ -54,7 +54,7 @@
   },
   "devDependencies": {
     "cypress": "^3.3.1",
-    "prettier": "^1.17.0",
+    "prettier": "^1.18.2",
     "typescript": "^3.5.1"
   },
   "repository": {
