--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-remark-autolink-headers": "^2.0.16",
     "gatsby-remark-copy-linked-files": "^2.0.13",
     "gatsby-remark-external-links": "0.0.4",
+    "gatsby-remark-images": "^3.1.0",
     "gatsby-remark-katex": "^3.0.4",
     "gatsby-remark-prismjs": "^3.2.11",
     "gatsby-source-filesystem": "^2.0.39",
