--- a/package.json
+++ b/package.json
@@ -14,13 +14,6 @@
     "test": "cypress open"
   },
   "dependencies": {
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.0.8",
-    "@types/react": "^16.8.19",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-helmet": "^5.0.8",
-    "@types/styled-components": "^4.1.16",
-    "@types/typography": "^0.16.2",
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.9.0",
     "gatsby-background-image": "^0.7.0",
@@ -31,7 +24,6 @@
     "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-plugin-sitemap": "^2.1.0",
     "gatsby-plugin-styled-components": "^3.0.7",
-    "gatsby-plugin-typescript": "^2.0.15",
     "gatsby-plugin-typography": "^2.2.13",
     "gatsby-remark-autolink-headers": "^2.0.16",
     "gatsby-remark-copy-linked-files": "^2.0.13",
@@ -55,13 +47,11 @@
     "typography-theme-github": "^0.16.19"
   },
   "devDependencies": {
-    "@cypress/webpack-preprocessor": "^4.1.0",
     "axe-core": "^3.2.2",
     "babel-loader": "^8.0.6",
-    "cypress": "^3.3.1",
+    "cypress": "^3.4.0",
     "cypress-axe": "^0.5.1",
-    "prettier": "^1.18.2",
-    "typescript": "^3.5.1"
+    "prettier": "^1.18.2"
   },
   "repository": {
     "type": "git",
