--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "cypress open"
   },
   "dependencies": {
+    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.3.0",
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.9.0",
     "gatsby-background-image": "^0.7.0",
@@ -49,7 +50,7 @@
   "devDependencies": {
     "axe-core": "^3.2.2",
     "babel-loader": "^8.0.6",
-    "cypress": "^3.4.0",
+    "cypress": "^3.4.1",
     "cypress-axe": "^0.5.1",
     "prettier": "^1.18.2"
   },
