--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "test": "cypress open"
   },
   "dependencies": {
-    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.3.0",
     "babel-plugin-styled-components": "^1.10.0",
+    "fuse.js": "^3.4.5",
     "gatsby": "^2.9.0",
     "gatsby-background-image": "^0.7.0",
     "gatsby-image": "^2.1.3",
