--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-plugin-sitemap": "^2.1.0",
     "gatsby-plugin-styled-components": "^3.0.7",
-    "gatsby-plugin-typography": "^2.2.13",
     "gatsby-remark-autolink-headers": "^2.0.16",
     "gatsby-remark-copy-linked-files": "^2.0.13",
     "gatsby-remark-external-links": "0.0.4",
@@ -42,10 +41,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-map-gl": "^5.0.3",
-    "react-typography": "^0.16.19",
-    "styled-components": "^4.2.0",
-    "typography": "^0.16.19",
-    "typography-theme-github": "^0.16.19"
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "axe-core": "^3.2.2",
